fix css display circle table on mobile, try to fix direct access to choose-table form, check diabled Join button

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -374,7 +374,6 @@
 
   .outer-circle
     margin: 10px
-    left: 15%
 
 #main-navbar li a
   line-height: 42px
